Added a projects app

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -27,10 +27,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="{% static 'Python_programming.pdf' %}">Resume</a>
-                <a class="nav-item nav-link" href="#">Projects</a>
+                <a class="nav-item nav-link" href="{% url 'resume_home' %}">Resume</a>
+                <a class="nav-item nav-link" href="{% url 'project' %}">Projects</a>
                 <a class="nav-item nav-link" href="#">CTFs</a>
-                <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
+                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
 
             </div>
         </div>
