--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resume</title>
+    <title>Projects</title>
 
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -38,9 +38,6 @@
 
 <h1>This is a work in progress. Please come back at a later time.</h1>
 
-<form action="{% static 'Python_programming.pdf' %}">
-    <button class="button">View Printer Friendly PDF</button>
-</form>
 
 </body>
 </html>
