--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" href="{% url 'resume_home' %}">Resume</a>
-      <a class="nav-item nav-link" href="#">Projects</a>
+      <a class="nav-item nav-link" href="{% url 'project' %}">Projects</a>
         <a class="nav-item nav-link" href="#">CTFs</a>
         <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
 
