Added a new app 'ctfs' and made migrations for it.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,8 +9,8 @@
 <main role="main">
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">Hi I'm Alex.</h1>
-            <p class="lead text-muted">Nu am inspiratie, bag pla am deja ceva scris, trebuie sa dau copy/paste aici.</p>
+            <h1 class="display-1 jumbotron-heading">Hi I'm Alex,</h1>
+            <p class="lead text-muted">and this is my portfolio/blog.</p>
             <p>
                 <a href="mailto:stoian.alex94@yahoo.com" class="btn btn-primary my-2">Email Me</a>
             </p>
