--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="{% url 'resume_home' %}">Resume</a>
                 <a class="nav-item nav-link" href="{% url 'project' %}">Projects</a>
-                <a class="nav-item nav-link" href="#">CTFs</a>
+                <a class="nav-item nav-link" href={% url 'ctfs' %}#">CTFs</a>
                 <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
             </div>
         </div>
