Center the flex item inside the flex box

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,8 +18,9 @@
         </div>
         <div class="header-overlay"></div>
         <div class="header-content">
-            <h1>Hello there,</h1>
-            <p>I'm Alex and you've landed on my portfolio site / blog.</p>
+            <h1 class="display-1 jumbotron-heading">Hello there,</h1>
+            <br />
+            <p class="lead">I'm Alex and you've landed on my portfolio site / blog.</p>
             <div class="btn-group">
                 <a href="#" class="btn btn-dark mx-1">View blog</a>
                 <a href="#" class="btn btn-primary mx-1">View site</a>
