--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 <body>
 
 <header>
-    <nav id="navigation" class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #212529">
+    <nav id="navigation" class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #212529">
         <a class="navbar-brand" href="{% url 'home' %}">Alex Stoian</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
