Compressed the video file for better performance.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
         <div class="fullscreen-video">
             <video autoplay loop="loop"
                    muted="muted">
-                <source src="{% static "video/parapanta_vid_code.MP4" %}" type="video/mp4">
+                <source src="{% static "video/parapanta_vid_code.mp4" %}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -21,9 +21,9 @@
             <h1 class="display-1 jumbotron-heading">Hello there,</h1>
             <br />
             <p class="lead">I'm Alex and you've landed on my portfolio site / blog.</p>
-            <div class="btn-group">
-                <a href="#" class="btn btn-dark mx-1">View blog</a>
-                <a href="#" class="btn btn-primary mx-1">View site</a>
+            <div class="btn-group btn-sm">
+                <a href="#" class="btn btn-dark mx-2">View blog</a>
+                <a href="#" class="btn btn-dark mx-2">View site</a>
             </div>
         </div>
     </header>
