--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -98,7 +98,8 @@ a {
 }
 
 img {
-    border-radius: 10%;
+    border: 2px solid #33cc33;
+    border-radius: 50%;
 }
 
 @media (max-width: 960px) {
